<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_cafe_restaurants"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/cafe_restaurant" />
        <item
            android:id="@+id/nav_cinemas"
            android:icon="@drawable/ic_menu_gallery"

            android:title="@string/cinema" />
        <item
            android:id="@+id/nav_enjoys"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/enjoy" />
        <item
            android:id="@+id/nav_night_clubs"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/night_club" />

        <item
            android:id="@+id/nav_theaters"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/theater" />

        <item
            android:id="@+id/nav_museums"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/museum" />

        <item
            android:id="@+id/nav_sports"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/sport" />

        <item
            android:id="@+id/nav_sights"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/sight" />

    </group>

    <item android:title="@string/event">
        <menu>
            <item
                android:id="@+id/nav_current_actions"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/current_action" />
            <item
                android:id="@+id/nav_future_actions"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/future_action" />
        </menu>

    </item>

    <item android:title="@string/creators">
        <menu>
            <item
                android:id="@+id/nav_contacts"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/contact" />

        </menu>




    </item>

</menu>
